--- a/CompiladorL3/nbproject/project.properties
+++ b/CompiladorL3/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=compiladorl3.CompiladorL3
+main.class=compiler.CompiladorFaccao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
